# color-ssh

./: .csh-config.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  dist-workspace.toml  example-config.yaml  release-plz.toml  test.kdbx
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  release-plz.yml  release.yml
docs/: GITHUB_WORKFLOWS_GUIDE.md  TUI_USER_GUIDE.md  terminal-core-architecture.md  terminal-frontend-contract.md
docs/perf/: ssh-throughput.md
scripts/bench/: hyperfine_cossh_matrix.sh
shell-completion/: README.md  ssh-in.sh  ssh-out.sh
shell-completion/fish/completions/: colorsh.fish  cossh.fish  csh.fish
shell-completion/fish/functions/: __colorsh_fzf_complete.fish  __cossh_fzf_complete.fish  __csh_fzf_complete.fish
shell-completion/zsh/: zsh-colorsh.zsh  zsh-cossh.zsh  zsh-csh.zsh
src/: args.rs  auth.rs  cli.rs  command_path.rs  config.rs  highlighter.rs  lib.rs  log.rs  logging.rs  main.rs  process.rs  runtime.rs  session_manager.rs  socket.rs  ssh.rs  ssh_args.rs  ssh_config.rs  terminal_host.rs  terminal_ratatui.rs  test.rs  tui.rs  ui.rs  utils.rs  vault.rs  watcher.rs
src/args/: mod.rs  ssh.rs  validation.rs
src/auth/: agent.rs  cli.rs  ipc.rs  mod.rs  pass.rs  prompt.rs  secret.rs  transport.rs  vault.rs
src/auth/agent/: client.rs  error.rs  mod.rs  runtime.rs  server.rs
src/cli/: args.rs  mod.rs  vault_args.rs
src/config/: errors.rs  highlight.rs  loader.rs  mod.rs  paths.rs  schema.rs  style.rs  watcher.rs
src/highlighter/: ansi.rs  core.rs  errors.rs  matcher.rs  mod.rs  render.rs
src/inventory/: edit.rs  error.rs  include.rs  loader.rs  migration.rs  mod.rs  model.rs  normalize.rs  parse.rs  path.rs  tree.rs  watcher.rs
src/log/: debug.rs  errors.rs  formatter.rs  macros.rs  mod.rs  ssh.rs  utils.rs
src/logging/: debug.rs  errors.rs  formatter.rs  mod.rs  ssh.rs
src/platform/: command_path.rs  fs_private.rs  mod.rs
src/process/: command.rs  command_spec.rs  exit.rs  interactive.rs  interactive_passthrough.rs  launch.rs  mod.rs  pty_output.rs  pty_runtime.rs  rdp_builder.rs  spawn.rs  spawn_common.rs  ssh_builder.rs  stream.rs  vault.rs
src/runtime/: dispatch.rs  logging.rs  mod.rs  reload_notice.rs  startup.rs
src/session_manager/: input.rs  render.rs  search.rs  selection.rs  ssh_session.rs
src/ssh_config/: include.rs  mod.rs  model.rs  parser.rs  path.rs
src/terminal/: engine.rs  event_listener.rs  frontend.rs  highlight_overlay.rs  host.rs  host_integration.rs  mod.rs  protocol.rs  ratatui.rs  rules.rs  session.rs  types.rs  view.rs
src/terminal_core/: color.rs  engine.rs  event_listener.rs  frontend.rs  highlight_overlay.rs  mod.rs  session.rs  types.rs  view.rs
src/test/: README.md  args.rs  config.rs  highlighter.rs  log.rs  main.rs  process.rs  process_pty_runtime.rs  process_rdp.rs  runtime.rs  ssh_args.rs  terminal_core_event_listener.rs  terminal_core_highlight_overlay.rs  terminal_highlight_overlay.rs  terminal_ratatui.rs
src/test/args/: mod.rs  ssh.rs
src/test/auth/: agent.rs  ipc.rs  pass.rs  secret.rs  transport.rs  vault.rs
src/test/config/: highlight.rs  loader.rs  watcher.rs
src/test/inventory/: edit.rs  loader.rs  migration.rs  model.rs  tree.rs  watcher.rs
src/test/log/: debug.rs  macros.rs  ssh.rs
src/test/process/: command_spec.rs  mod.rs  pty_runtime.rs  rdp_builder.rs  ssh_builder.rs
src/test/runtime/: dispatch.rs  logging.rs  mod.rs  startup.rs
src/test/ssh_config/: include.rs  parser.rs
src/test/support/: auth.rs  config.rs  fs.rs  mod.rs  state.rs
src/test/terminal/: event_listener.rs  mod.rs  (+2 more)
src/tui/: input.rs  mod.rs  mouse.rs  render.rs  search.rs  selection.rs  ssh_session.rs  state.rs  status_bar.rs  terminal_emulator.rs  text_edit.rs
src/ui/: core.rs  errors.rs  macros.rs  mod.rs  prompt.rs
src/vault/: commands.rs  core.rs  errors.rs  keepass.rs  keyring.rs  lib.rs  mod.rs
src/vault_cmds/: add.rs  del.rs  init.rs  mod.rs  show.rs
template/: default..csh-config.yaml  network.csh-config.yaml
templates/: cossh-theme.toml  default.colorsh-config.yaml  default.cossh-config.yaml  default.cossh-theme.toml  default.csh-config.yaml  linux.cossh-config.yaml  network.colorsh-config.yaml  network.cossh-config.yaml  network.csh-config.yaml
tests/: cli_smoke.rs
(+127 files in other folders)
