[package]
name = "color-ssh"
description = "A Rust-based SSH client with syntax highlighting."
version = "0.7.0"
edition = "2024"
authors = ["Karsyboy"]
documentation = "https://github.com/karsyboy/color-ssh"
readme = "README.md"
homepage = "https://github.com/karsyboy/color-ssh"
repository = "https://github.com/karsyboy/color-ssh"
license = "MIT"
keywords = ["ssh", "client", "syntax", "highlighting"]
categories = ["command-line-interface", "command-line-utilities", "network-programming"]

[[bin]]
name = "cossh"
path = "src/main.rs"

[lib]
name = "cossh"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.59", features = ["derive"] }
crossterm = { version = "0.29", features = ["osc52"] }
dirs = "6.0.0"
nix = { version = "0.31.1", features = ["fs", "user"] }
notify = "8.2.0"
once_cell = "1.21.3"
portable-pty = "0.9.0"
ratatui = "0.30.0"
regex = "1.12.3"
rpassword = "7.4.0"
serde = {version ="1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
unicode-width = "0.2.2"
alacritty_terminal = "0.25.1"
which = "8.0.0"
zeroize = "1.8.1"

[profile.release]
lto = "thin"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1
