[package]
name = "color-ssh"
description = "A Rust-based SSH client with syntax highlighting."
version = "0.7.1"
edition = "2024"
authors = ["Karsyboy"]
documentation = "https://github.com/karsyboy/color-ssh"
readme = "README.md"
homepage = "https://github.com/karsyboy/color-ssh"
repository = "https://github.com/karsyboy/color-ssh"
license = "MIT"
keywords = ["ssh", "client", "syntax", "highlighting"]
categories = ["command-line-interface", "command-line-utilities", "network-programming"]

[[bin]]
name = "cossh"
path = "src/main.rs"

[lib]
name = "cossh"
path = "src/lib.rs"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
crossterm = { version = "0.29", features = ["osc52"] }
dirs = "6.0.0"
getrandom = "0.4.1"
interprocess = "2.3.1"
nix = { version = "0.31.2", features = ["fs", "user"] }
notify = "8.2.0"
once_cell = "1.21.3"
portable-pty = "0.9.0"
ratatui = "0.30.0"
regex = "1.12.3"
rpassword = "7.4.0"
serde = {version ="1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
unicode-width = "0.2.2"
alacritty_terminal = "0.25.1"
which = "8.0.0"
zeroize = "1.8.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }
widestring = "1.2.1"

[profile.release]
lto = "thin"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1
