[package]
name = "color-ssh"
description = "A Rust-based SSH client with syntax highlighting."
version = "0.9.0"
edition = "2024"
authors = ["Karsyboy"]
documentation = "https://github.com/karsyboy/color-ssh"
readme = "README.md"
homepage = "https://github.com/karsyboy/color-ssh"
repository = "https://github.com/karsyboy/color-ssh"
license = "MIT"
keywords = ["ssh", "client", "syntax", "highlighting"]
categories = ["command-line-interface", "command-line-utilities", "network-programming"]

[[bin]]
name = "cossh"
path = "src/main.rs"

[lib]
name = "cossh"
path = "src/lib.rs"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29", features = ["osc52"] }
dirs = "6.0.0"
getrandom = "0.4.3"
interprocess = "2.4.2"
nix = { version = "0.31.3", features = ["fs", "user"] }
notify = "8.2.0"
once_cell = "1.21.4"
portable-pty = "0.9.0"
ratatui = "0.30.2"
regex = "1.12.4"
secrecy = "0.10"
serde = {version ="1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yml = "0.0.13"
unicode-width = "0.2.2"
alacritty_terminal = "0.26.0"
which = "8.0.4"
zeroize = "1.9.0"

[dev-dependencies]
temp-env = "0.3.6"

[profile.release]
lto = "thin"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1
